objects/ProductRequestLineItem.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Product Request Line Items</relationshipLabel>
        <relationshipName>Product_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Part_Number__c</fullName>
        <formula>Product2.Internal_Part_Number__c</formula>
        <label>Internal Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>Product2.Manufacturer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Cost__c</fullName>
        <label>Purchase Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Location__c</fullName>
        <label>Purchase Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchased Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ProductRequestLineItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Request Line Items</label>
    </listViews>
    <listViews>
        <fullName>All_ProductRequestLineItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Request Line Items</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>